--- a/frontend/assets/css/spapp.css
+++ b/frontend/assets/css/spapp.css
@@ -25,3 +25,10 @@ main#spapp>section:target {
 main#spapp>section:target~* {
     display: none;
 }
+
+.navbar-nav .nav-item .nav-link.active, 
+.navbar-nav .nav-item .nav-link:focus, 
+.navbar-nav .nav-item .nav-link:hover{
+    color: #111 !important;
+    background-color: transparent;
+}
